--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -16,6 +16,19 @@
 }
 
 .footer-icon {
+  margin: 0 20px 0 20px;
   color: #fff;
-  font-size: 35px;
+  font-size: 25px;
+  &:hover {
+    color: #fcff4b;
+  }
+}
+
+.footer-icon-gh {
+  color: #fff;
+  font-size: 25px;
+  margin: 0 20px 0 20px;
+  &:hover {
+    color: #fcff4b;
+  }
 }
