--- a/src/components/MealItem/MealItem.scss
+++ b/src/components/MealItem/MealItem.scss
@@ -9,6 +9,8 @@
   background-color: #cdd7d6;
   color: #000;
   padding: 1rem;
+  margin: 1rem 0 1rem 0;
+
   border-radius: 8px;
   max-width: 300px;
   max-height: 300px;
