--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -51,3 +51,23 @@
   margin-top: 2rem;
   color: red;
 }
+
+
+@media(max-width: 1220px){
+  .grid-container { 
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media(max-width: 1000px){
+  .grid-container { 
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media(max-width: 780px){
+  .grid-container { 
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+}
