--- a/src/components/MealItem/MealItem.scss
+++ b/src/components/MealItem/MealItem.scss
@@ -12,15 +12,19 @@
   margin: 1rem 0 1rem 0;
   border-radius: 8px;
   max-width: 300px;
-  max-height: 300px;
+  max-height: 500px;
   min-width: 300px;
   min-height: 300px;
-
   text-align: center;
-  img {
-    max-width: 150px;
-    max-height: 150px;
-  }
+}
+
+.img {
+  margin: 0 auto;
+  min-width: 100%;
+  max-width: 50%;
+  min-height: 50%;
+  max-height: 50%;
+  border-radius: 10px;
 }
 .description {
   width: 50%;
@@ -37,5 +41,3 @@
   text-align: center;
   font-size: 25px;
 }
-
-
