--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -52,6 +52,24 @@
   color: red;
 }
 
+
+.button-clear { 
+  margin-top: 1.5rem;
+  min-width: 50px;
+  padding: 5px 20px;
+  border-radius: 6px;
+  border: none;
+  background: #141414;
+  color: #fff;
+  cursor: pointer;
+  font-size: 24px;
+  &:hover {
+    transition: all 0.4s ease-in-out;
+    transform: scale(1.1);
+    cursor: pointer;
+  }
+}
+
 @media (max-width: 1220px) {
   .grid-container {
     grid-template-columns: repeat(3, 1fr);
@@ -69,3 +87,4 @@
     grid-template-columns: repeat(1, 1fr);
   }
 }
+
