--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,9 +1,13 @@
 .footer-container {
-  background-color: #3a3335;
+  background-color: #1c2237;
+  padding: 4rem 0 2rem 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+  min-height: 10vh;
   min-width: 100vw;
+  position: sticky;
 }
 
 .footer-wrap {
