--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -19,3 +19,18 @@
   color: #fff;
   text-decoration: none;
 }
+
+.react-link-about {
+  color: #fff;
+  text-decoration: none;
+  font-size: 25px;
+  &:hover {
+    transition: all ease 0.5s;
+    color: #333;
+  }
+}
+
+.about {
+  text-align: center;
+  margin-top: 1rem;
+}
