--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -44,3 +44,14 @@
     color: #fcff4b;
   }
 }
+
+label[for="gh-link"] {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
