--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -69,6 +69,17 @@
   }
 }
 
+label[for="search"] {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+
 @media (max-width: 1220px) {
   .grid-container {
     grid-template-columns: repeat(3, 1fr);
